<resources>
    <string name="app_name">TitipinAja</string>
    <string name="we_will_send_you_an">We will send you an</string>
    <string name="nama">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="jastiper">Jastiper</string>
    <string name="user">User</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="notifications">Notifications</string>
    <string name="change_image">Change Image</string>
</resources>